@@ -15,7 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -41,9 +41,11 @@ public class SecurityConfig {
                         .requestMatchers("/api/v1/verification/**").permitAll()
                         .requestMatchers("/api/v1/technology/list", "/api/v1/language/list").permitAll()
                         .requestMatchers("/api/v1/account/developersByTechnologiesAndAvailableTime").permitAll()
+                        .requestMatchers("/api/v1/session-request/**").hasAnyAuthority("ADMIN", "USER")
                         .requestMatchers("/api/v1/technology/add", "/api/v1/language/add").hasAnyAuthority("ADMIN")
+                        .requestMatchers("/api/v1/technology/update", "/api/v1/language/update").hasAnyAuthority("ADMIN")
+                        .requestMatchers("/api/v1/technology/delete", "/api/v1/language/delete").hasAnyAuthority("ADMIN")
                         .anyRequest().authenticated()
-
                 );
         return http.build();
     }
@@ -56,10 +58,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
